@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-05T01:21:08Z",
-  "count" : 3,
+  "timestamp" : "2022-06-18T08:17:51Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
