@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-18T01:16:45Z",
+  "timestamp" : "2022-06-18T08:17:51Z",
   "count_outdated" : 339,
   "uniques_outdated" : 192,
   "count" : 366,
-  "uniques" : 210,
+  "uniques" : 211,
   "clones" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
