@@ -1,3 +1,10 @@
+2022-06-18T08:17:51Z:
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 192 339 / 210 366
+* notice: next accum: outdated-unq outdated-all / unq all: 192 339 / 211 366
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-04 2022-06-18]
+
 2022-06-18T01:16:45Z:
 * notice: last 14d: unq all: 5 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 192 339 / 209 365
